fixed a small mistake in explanation

--- a/finding_donors_for_charity.ipynb
+++ b/finding_donors_for_charity.ipynb
@@ -1036,7 +1036,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implementation: Initial Model Evaluation\n",
+    "### Initial Model Evaluation\n",
     "In the next code cell, I will implement the following:\n",
     "- Import the three supervised learning models I've discussed in the previous section.\n",
     "- Initialize the three models and store them in `'clf_A'`, `'clf_B'`, and `'clf_C'`.\n",
