--- a/finding_donors_for_charity.ipynb
+++ b/finding_donors_for_charity.ipynb
@@ -845,23 +845,8 @@
     "\n",
     "In particular, when $\\beta = 0.5$, more emphasis is placed on precision. This is called the **F$_{0.5}$ score** (or F-score for simplicity).\n",
     "\n",
-    "Looking at the distribution of classes (those who make at most \\\\$50,000 , and those who make more), it's clear most individuals do not make more than \\$50,000. This can greatly affect **accuracy**, since we could simply say *\"this person does not make more than \\$50,000\"* and generally be right, without ever looking at the data! Making such a statement would be called **naive**, since we have not considered any information to substantiate the claim. It is always important to consider the *naive prediction* for our data, to help establish a benchmark for whether a model is performing well. That been said, using that prediction would be pointless: If we predicted all people made less than \\$50,000, the charity organization would identify no one as donors. \n",
-    "\n",
-    "\n",
-    "#### Recap of accuracy, precision, recall\n",
-    "\n",
-    "** Accuracy ** measures how often the classifier makes the correct prediction. It’s the ratio of the number of correct predictions to the total number of predictions (the number of test data points).\n",
-    "\n",
-    "** Precision ** tells us what proportion of messages we classified as spam, actually were spam.\n",
-    "It is a ratio of true positives(words classified as spam, and which are actually spam) to all positives(all words classified as spam, irrespective of whether that was the correct classificatio), in other words it is the ratio of\n",
-    "\n",
-    "`[True Positives/(True Positives + False Positives)]`\n",
-    "\n",
-    "** Recall(sensitivity)** tells us what proportion of messages that actually were spam were classified by us as spam.\n",
-    "It is a ratio of true positives(words classified as spam, and which are actually spam) to all the words that were actually spam, in other words it is the ratio of\n",
-    "\n",
-    "`[True Positives/(True Positives + False Negatives)]`\n",
-    "\n",
+    "Looking at the distribution of classes (those who make at most \\\\$50,000 , and those who make more), it's clear most individuals do not make more than \\$50,000. This can greatly affect **accuracy**, since we could simply say *\"this person does not make more than \\$50,000\"* and generally be right, without ever looking at the data! Making such a statement would be called **naive**, since we have not considered any information to substantiate the claim. It is always important to consider the *naive prediction* for our data, to help establish a benchmark for whether a model is performing well. That been said, using that prediction would be pointless: If we predicted all people made less than \\$50,000, the charity organization would identify no one as donors.\n",
+    "### What metric should we care about the most?\n",
     "For classification problems that are skewed in their classification distributions like in our case, for example if we had a 100 text messages and only 2 were spam and the rest 98 weren't, accuracy by itself is not a very good metric. We could classify 90 messages as not spam(including the 2 that were spam but we classify them as not spam, hence they would be false negatives) and 10 as spam(all 10 false positives) and still get a reasonably good accuracy score. For such cases, precision and recall come in very handy. These two metrics can be combined to get the F1 score, which is weighted average(harmonic mean) of the precision and recall scores. This score can range from 0 to 1, with 1 being the best possible F1 score(we take the harmonic mean as we are dealing with ratios)."
    ]
   },
