slight updates to eplanation

--- a/finding_donors_for_charity.ipynb
+++ b/finding_donors_for_charity.ipynb
@@ -915,7 +915,7 @@
    "source": [
     "### First Model: Random Forest:\n",
     "**Real world applications:**\\\n",
-    "• Stock market prediction\\\n",
+    "• Stock market prediction.\\\n",
     "• search ranking.\\\n",
     "**Strengths:**\\\n",
     "• Can automatically handle missing values.\\\n",
@@ -925,7 +925,7 @@
     "• Long training period.\\\n",
     "• Computationally expensive.\\\n",
     "**Candidacy:**\\\n",
-    "Random forest is a very powerful algorithm that's proved to achieve very high accuracy.\\\n",
+    "Random forest is a very powerful algorithm that's proved to achieve very high accuracy.\n",
     "### Second Model: AdaBoost:\n",
     "**Real world applications:** \\\n",
     "• Customer churn prediction.\\\n",
@@ -936,7 +936,7 @@
     "• learns progressively, so it requires quality data.\\\n",
     "• Sensitive to noisy data and outliers.\\\n",
     "**Candidacy:**\\\n",
-    "Our data is very clean and normalized, AdaBoost might perform well on this dataset.\\\n",
+    "Our data is very clean and normalized, AdaBoost might perform well on this dataset.\n",
     "### Third Model: Support Vector Machines:\n",
     "**Real world applications:** \\\n",
     "• Face detection.\\\n",
