--- a/finding_donors_for_charity.ipynb
+++ b/finding_donors_for_charity.ipynb
@@ -1237,7 +1237,7 @@
    "metadata": {},
    "source": [
     "### Extracting Feature Importance\n",
-    "In the next python cell I will use the `feature_importance_` attribute to determine the top 5 most important features for the census dataset."
+    "In the next cell I will use the `feature_importance_` attribute to determine the top 5 most important features for the census dataset."
    ]
   },
   {
@@ -1336,7 +1336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final model has a slightly lower accuracy, however, the drop in F-score is significant. this is because the classifier isn't able to accurately capture the complexity of the data and therefore not able to generalize well. However, if trainng time is a factor and sacrificing 5% of the F-score won't do a big harm compared to long training, I would consider the using the reduced data."
+    "The final model has a slightly lower accuracy, however, the drop in F-score is significant. this is because the classifier isn't able to accurately capture the complexity of the data and therefore not able to generalize well. However, if training time is a factor and sacrificing 5% of the F-score won't do a big harm compared to long training, I would consider the using the reduced data."
    ]
   }
  ],
